example/sample_app/operator-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: 2018-09-14T11:08:23Z
  generation: 2
  labels:
    name: environment-operator
  name: environment-operator
  namespace: sample-app
  resourceVersion: "25691"
  selfLink: /apis/extensions/v1beta1/namespaces/sample-app/deployments/environment-operator
  uid: 7f184e63-b80e-11e8-af11-065fecccbff6
spec:
  replicas: 1
  selector:
    matchLabels:
      name: environment-operator
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: environment-operator
      name: environment-operator
    spec:
      containers:
      - env:
        - name: GIT_REMOTE_REPOSITORY
          value: git@github.com:pearsontechnology/environment-operator.git
        - name: GIT_BRANCH
          value: BITE-3572
        - name: GIT_PRIVATE_KEY
          valueFrom:
            secretKeyRef:
              key: key
              name: git-private-key
        - name: DOCKER_REGISTRY
          value: index.docker.io
        - name: PROJECT
          value: pearsontechnology
        - name: ENVIRONMENT_NAME
          value: sample-app-environment
        - name: BITESIZE_FILE
          value: environment.sample
        - name: AUTH_TOKEN_FILE
          value: /etc/auth/token
        - name: DEBUG
          value: "true"
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: geribatai/eo:5cdd0b841dc0c4183fa605d45b56410bbea12206
        imagePullPolicy: Always
        name: environment-operator
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        securityContext:
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/auth
          name: auth-token
          readOnly: true
        - mountPath: /etc/git
          name: git-key
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: auth-token
        secret:
          defaultMode: 420
          secretName: auth-token-file
      - name: git-key
        secret:
          defaultMode: 420
          secretName: git-private-key
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-09-14T11:08:23Z
    lastUpdateTime: 2018-09-14T11:08:23Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
